fix: set color with custom theme
Attributes like color must be set when using a custom theme on a component

--- a/app/docs/customize/theme/theme.mdx
+++ b/app/docs/customize/theme/theme.mdx
@@ -65,6 +65,6 @@ const customTheme: CustomFlowbiteTheme['button'] = {
 };
 
 export default function MyPage() {
-  return <Button theme={customTheme}>Click me</Button>;
+  return <Button theme={customTheme} color="primary">Click me</Button>;
 }
 ```
